src/test/fail/basic_syntax/bad_typecast.lly
#[
SyntaxError: Cannot cast type 'integer' to type 'string'.
Where: File "bad_typecast.lly" at line 6
]#

10.@(string)
